--- a/kernel_installer_gui/locale/fr/LC_MESSAGES/kernel-installer.po
+++ b/kernel_installer_gui/locale/fr/LC_MESSAGES/kernel-installer.po
@@ -466,6 +466,15 @@ msgstr "Erreur de construction"
 msgid "Compilation of Linux %(version)s has failed."
 msgstr "La compilation de Linux %(version)s ha fallado."
 
+#: kernel_installer_gui/core/notifications.py:110
+msgid "Build cancelled"
+msgstr "Compilation annulée"
+
+#: kernel_installer_gui/core/notifications.py:111
+#, python-format
+msgid "Compilation of Linux %(version)s was cancelled by user."
+msgstr "La compilation de Linux %(version)s a été annulée par l'utilisateur."
+
 #: kernel_installer_gui/core/notifications.py:109
 msgid "Reboot required"
 msgstr "Redémarrage requis"
