--- a/kernel_installer_gui/locale/de/LC_MESSAGES/kernel-installer.po
+++ b/kernel_installer_gui/locale/de/LC_MESSAGES/kernel-installer.po
@@ -330,6 +330,11 @@ msgstr "Abhängigkeiten (.deb) werden generiert..."
 msgid "Generating RPM packages..."
 msgstr "Abhängigkeiten (RPM) werden generiert..."
 
+
+#: kernel_installer_gui/core/kernel.py:409
+msgid "Generating RPM packages (optimized)..."
+msgstr "Generiere RPM-Pakete (optimiert)..."
+
 #: kernel_installer_gui/core/kernel.py:413
 msgid "Compiling for direct installation..."
 msgstr "Kompilierung für direkte Installation..."
@@ -366,24 +371,20 @@ msgid "Installing kernel..."
 msgstr "Kernel wird installiert..."
 
 #: kernel_installer_gui/core/kernel.py:475
-#, fuzzy
 msgid "Preparing .deb packages installation..."
-msgstr "Abhängigkeiten (.deb) werden generiert..."
+msgstr "Bereite Installation der .deb-Pakete vor..."
 
 #: kernel_installer_gui/core/kernel.py:480
-#, fuzzy
 msgid "Preparing RPM packages installation..."
-msgstr "Abhängigkeiten (RPM) werden generiert..."
+msgstr "Bereite Installation der RPM-Pakete vor..."
 
 #: kernel_installer_gui/core/kernel.py:485
-#, fuzzy
 msgid "Preparing direct installation..."
-msgstr "Kompilierung für direkte Installation..."
+msgstr "Bereite direkte Installation vor..."
 
 #: kernel_installer_gui/core/kernel.py:498
-#, fuzzy
 msgid "Finalizing installation (may require password)..."
-msgstr "Umgebung wird verifiziert (Passwort erforderlich)..."
+msgstr "Schließe Installation ab (Passwort erforderlich)..."
 
 #: kernel_installer_gui/core/kernel.py:503
 #, python-format
@@ -656,6 +657,22 @@ msgstr " (Neueste)"
 #: kernel_installer_gui/widgets/version_picker.py:140
 msgid " (LTS)"
 msgstr " (LTS)"
+
+#: kernel_installer_gui/core/kernel.py:557
+msgid "Installation cancelled during download."
+msgstr "Installation cancelled during download."
+
+#: kernel_installer_gui/core/kernel.py:566
+msgid "Installation cancelled during configuration."
+msgstr "Installation cancelled during configuration."
+
+#: kernel_installer_gui/widgets/build_progress.py:224
+msgid "Cancellation complete."
+msgstr "Cancellation complete."
+
+#: kernel_installer_gui/widgets/build_progress.py:225
+msgid "Cancelled"
+msgstr "Cancelled"
 
 #~ msgid "Installing .deb packages..."
 #~ msgstr "deb-Pakete werden installiert..."
