--- a/kernel_installer_gui/locale/fr/LC_MESSAGES/kernel-installer.po
+++ b/kernel_installer_gui/locale/fr/LC_MESSAGES/kernel-installer.po
@@ -333,6 +333,11 @@ msgstr "Génération des paquets .deb..."
 msgid "Generating RPM packages..."
 msgstr "Génération des paquets RPM..."
 
+
+#: kernel_installer_gui/core/kernel.py:409
+msgid "Generating RPM packages (optimized)..."
+msgstr "Génération des paquets RPM (optimisée)..."
+
 #: kernel_installer_gui/core/kernel.py:413
 msgid "Compiling for direct installation..."
 msgstr "Compilation pour installation directe..."
@@ -369,24 +374,20 @@ msgid "Installing kernel..."
 msgstr "Installation du noyau..."
 
 #: kernel_installer_gui/core/kernel.py:475
-#, fuzzy
 msgid "Preparing .deb packages installation..."
-msgstr "Génération des paquets .deb..."
+msgstr "Préparation de l'installation des paquets .deb..."
 
 #: kernel_installer_gui/core/kernel.py:480
-#, fuzzy
 msgid "Preparing RPM packages installation..."
-msgstr "Génération des paquets RPM..."
+msgstr "Préparation de l'installation des paquets RPM..."
 
 #: kernel_installer_gui/core/kernel.py:485
-#, fuzzy
 msgid "Preparing direct installation..."
-msgstr "Compilation pour installation directe..."
+msgstr "Préparation de l'installation directe..."
 
 #: kernel_installer_gui/core/kernel.py:498
-#, fuzzy
 msgid "Finalizing installation (may require password)..."
-msgstr "Vérification de l'environnement (mot de passe requis)..."
+msgstr "Finalisation de l'installation (peut nécessiter un mot de passe)..."
 
 #: kernel_installer_gui/core/kernel.py:503
 #, python-format
@@ -662,6 +663,22 @@ msgstr " (Dernière)"
 #: kernel_installer_gui/widgets/version_picker.py:140
 msgid " (LTS)"
 msgstr " (LTS)"
+
+#: kernel_installer_gui/core/kernel.py:557
+msgid "Installation cancelled during download."
+msgstr "Installation cancelled during download."
+
+#: kernel_installer_gui/core/kernel.py:566
+msgid "Installation cancelled during configuration."
+msgstr "Installation cancelled during configuration."
+
+#: kernel_installer_gui/widgets/build_progress.py:224
+msgid "Cancellation complete."
+msgstr "Cancellation complete."
+
+#: kernel_installer_gui/widgets/build_progress.py:225
+msgid "Cancelled"
+msgstr "Cancelled"
 
 #~ msgid "Installing .deb packages..."
 #~ msgstr "Installation des paquets .deb..."
