--- a/kernel_installer_gui/locale/pt/LC_MESSAGES/kernel-installer.po
+++ b/kernel_installer_gui/locale/pt/LC_MESSAGES/kernel-installer.po
@@ -327,6 +327,11 @@ msgstr "A gerar pacotes .deb..."
 msgid "Generating RPM packages..."
 msgstr "A gerar pacotes RPM..."
 
+
+#: kernel_installer_gui/core/kernel.py:409
+msgid "Generating RPM packages (optimized)..."
+msgstr "A gerar pacotes RPM (otimizado)..."
+
 #: kernel_installer_gui/core/kernel.py:413
 msgid "Compiling for direct installation..."
 msgstr "A compilar para instalação direta..."
@@ -363,24 +368,20 @@ msgid "Installing kernel..."
 msgstr "A instalar kernel..."
 
 #: kernel_installer_gui/core/kernel.py:475
-#, fuzzy
 msgid "Preparing .deb packages installation..."
-msgstr "A gerar pacotes .deb..."
+msgstr "A preparar a instalação de pacotes .deb..."
 
 #: kernel_installer_gui/core/kernel.py:480
-#, fuzzy
 msgid "Preparing RPM packages installation..."
-msgstr "A gerar pacotes RPM..."
+msgstr "A preparar a instalação de pacotes RPM..."
 
 #: kernel_installer_gui/core/kernel.py:485
-#, fuzzy
 msgid "Preparing direct installation..."
-msgstr "A compilar para instalação direta..."
+msgstr "A preparar a instalação direta..."
 
 #: kernel_installer_gui/core/kernel.py:498
-#, fuzzy
 msgid "Finalizing installation (may require password)..."
-msgstr "Verificando ambiente (requer senha)..."
+msgstr "A finalizar a instalação (pode exigir palavra-passe)..."
 
 #: kernel_installer_gui/core/kernel.py:503
 #, python-format
@@ -653,6 +654,22 @@ msgstr " (Mais recente)"
 #: kernel_installer_gui/widgets/version_picker.py:140
 msgid " (LTS)"
 msgstr " (LTS)"
+
+#: kernel_installer_gui/core/kernel.py:557
+msgid "Installation cancelled during download."
+msgstr "Installation cancelled during download."
+
+#: kernel_installer_gui/core/kernel.py:566
+msgid "Installation cancelled during configuration."
+msgstr "Installation cancelled during configuration."
+
+#: kernel_installer_gui/widgets/build_progress.py:224
+msgid "Cancellation complete."
+msgstr "Cancellation complete."
+
+#: kernel_installer_gui/widgets/build_progress.py:225
+msgid "Cancelled"
+msgstr "Cancelled"
 
 #~ msgid "Installing .deb packages..."
 #~ msgstr "A instalar pacotes .deb..."
