--- a/kernel_installer_gui/locale/ro/LC_MESSAGES/kernel-installer.po
+++ b/kernel_installer_gui/locale/ro/LC_MESSAGES/kernel-installer.po
@@ -328,6 +328,11 @@ msgstr "Se generează pachete .deb..."
 msgid "Generating RPM packages..."
 msgstr "Se generează pachete RPM..."
 
+
+#: kernel_installer_gui/core/kernel.py:409
+msgid "Generating RPM packages (optimized)..."
+msgstr "Generare pachete RPM (optimizat)..."
+
 #: kernel_installer_gui/core/kernel.py:413
 msgid "Compiling for direct installation..."
 msgstr "Se compilează pentru instalare directă..."
@@ -364,24 +369,20 @@ msgid "Installing kernel..."
 msgstr "Se instalează nucleul..."
 
 #: kernel_installer_gui/core/kernel.py:475
-#, fuzzy
 msgid "Preparing .deb packages installation..."
-msgstr "Se generează pachete .deb..."
+msgstr "Se pregătește instalarea pachetelor .deb..."
 
 #: kernel_installer_gui/core/kernel.py:480
-#, fuzzy
 msgid "Preparing RPM packages installation..."
-msgstr "Se generează pachete RPM..."
+msgstr "Se pregătește instalarea pachetelor RPM..."
 
 #: kernel_installer_gui/core/kernel.py:485
-#, fuzzy
 msgid "Preparing direct installation..."
-msgstr "Se compilează pentru instalare directă..."
+msgstr "Se pregătește instalarea directă..."
 
 #: kernel_installer_gui/core/kernel.py:498
-#, fuzzy
 msgid "Finalizing installation (may require password)..."
-msgstr "Se verifică mediul (necesită parolă)..."
+msgstr "Se finalizează instalarea (poate necesita parolă)..."
 
 #: kernel_installer_gui/core/kernel.py:503
 #, python-format
@@ -655,6 +656,22 @@ msgstr " (Ultima)"
 #: kernel_installer_gui/widgets/version_picker.py:140
 msgid " (LTS)"
 msgstr " (LTS)"
+
+#: kernel_installer_gui/core/kernel.py:557
+msgid "Installation cancelled during download."
+msgstr "Installation cancelled during download."
+
+#: kernel_installer_gui/core/kernel.py:566
+msgid "Installation cancelled during configuration."
+msgstr "Installation cancelled during configuration."
+
+#: kernel_installer_gui/widgets/build_progress.py:224
+msgid "Cancellation complete."
+msgstr "Cancellation complete."
+
+#: kernel_installer_gui/widgets/build_progress.py:225
+msgid "Cancelled"
+msgstr "Cancelled"
 
 #~ msgid "Installing .deb packages..."
 #~ msgstr "Se instalează pachetele .deb..."
