--- a/kernel_installer_gui/locale/ru/LC_MESSAGES/kernel-installer.po
+++ b/kernel_installer_gui/locale/ru/LC_MESSAGES/kernel-installer.po
@@ -330,6 +330,11 @@ msgstr "Создание пакетов .deb..."
 msgid "Generating RPM packages..."
 msgstr "Создание пакетов RPM..."
 
+
+#: kernel_installer_gui/core/kernel.py:409
+msgid "Generating RPM packages (optimized)..."
+msgstr "Создание RPM пакетов (оптимизировано)..."
+
 #: kernel_installer_gui/core/kernel.py:413
 msgid "Compiling for direct installation..."
 msgstr "Компиляция для прямой установки..."
@@ -366,24 +371,20 @@ msgid "Installing kernel..."
 msgstr "Установка ядра..."
 
 #: kernel_installer_gui/core/kernel.py:475
-#, fuzzy
 msgid "Preparing .deb packages installation..."
-msgstr "Создание пакетов .deb..."
+msgstr "Подготовка к установке .deb пакетов..."
 
 #: kernel_installer_gui/core/kernel.py:480
-#, fuzzy
 msgid "Preparing RPM packages installation..."
-msgstr "Создание пакетов RPM..."
+msgstr "Подготовка к установке RPM пакетов..."
 
 #: kernel_installer_gui/core/kernel.py:485
-#, fuzzy
 msgid "Preparing direct installation..."
-msgstr "Компиляция для прямой установки..."
+msgstr "Подготовка к прямой установке..."
 
 #: kernel_installer_gui/core/kernel.py:498
-#, fuzzy
 msgid "Finalizing installation (may require password)..."
-msgstr "Проверка окружения (требуется пароль)..."
+msgstr "Завершение установки (может потребоваться пароль)..."
 
 #: kernel_installer_gui/core/kernel.py:503
 #, python-format
@@ -662,6 +663,22 @@ msgstr " (Последняя)"
 #: kernel_installer_gui/widgets/version_picker.py:140
 msgid " (LTS)"
 msgstr " (LTS)"
+
+#: kernel_installer_gui/core/kernel.py:557
+msgid "Installation cancelled during download."
+msgstr "Installation cancelled during download."
+
+#: kernel_installer_gui/core/kernel.py:566
+msgid "Installation cancelled during configuration."
+msgstr "Installation cancelled during configuration."
+
+#: kernel_installer_gui/widgets/build_progress.py:224
+msgid "Cancellation complete."
+msgstr "Cancellation complete."
+
+#: kernel_installer_gui/widgets/build_progress.py:225
+msgid "Cancelled"
+msgstr "Cancelled"
 
 #~ msgid "Installing .deb packages..."
 #~ msgstr "Установка paquetes .deb..."
