--- a/kernel_installer_gui/locale/de/LC_MESSAGES/kernel-installer.po
+++ b/kernel_installer_gui/locale/de/LC_MESSAGES/kernel-installer.po
@@ -701,5 +701,42 @@ msgstr "Cancelled"
 #~ msgid "Warning: Error regenerating initramfs"
 #~ msgstr "Warnung: Fehler beim Regenerieren von initramfs"
 
-#~ msgid "Warning: Error updating bootloader"
-#~ msgstr "Warnung: Fehler beim Aktualisieren des Bootloaders"
+#: kernel_installer_gui/core/kernel.py:414
+msgid "Generating .deb package (compressing)..."
+msgstr "Erstelle .deb Paket (komprimiere)..."
+
+#: kernel_installer_gui/core/kernel.py:416
+msgid "Preparing Debian packaging scripts..."
+msgstr "Vorbereitung der Debian-Paketskripte..."
+
+#: kernel_installer_gui/core/kernel.py:417
+msgid "Generating RPM package (compressing)..."
+msgstr "Erstelle RPM Paket (komprimiere)..."
+
+#: kernel_installer_gui/core/kernel.py:418
+msgid "RPM package generated."
+msgstr "RPM-Paket erstellt."
+
+#: kernel_installer_gui/core/kernel.py:419
+msgid "Kernel image ready, finalizing..."
+msgstr "Kernel-Image bereit, abschließen..."
+
+#: kernel_installer_gui/core/kernel.py:420
+msgid "Finalizing modules (stage 2)..."
+msgstr "Abschluss der Module (Stufe 2)..."
+
+#: kernel_installer_gui/core/kernel.py:421
+msgid "Compressing kernel modules..."
+msgstr "Komprimiere Kernel-Module..."
+
+#: kernel_installer_gui/core/kernel.py:422
+msgid "Running mkinitcpio..."
+msgstr "mkinitcpio wird ausgeführt..."
+
+#: kernel_installer_gui/core/kernel.py:423
+msgid "Running dracut..."
+msgstr "dracut wird ausgeführt..."
+
+#: kernel_installer_gui/core/kernel.py:772
+msgid "Removing kernel and updating bootloader..."
+msgstr "Entferne Kernel und schreibe Bootloader neu..."
