--- a/kernel_installer_gui/locale/ru/LC_MESSAGES/kernel-installer.po
+++ b/kernel_installer_gui/locale/ru/LC_MESSAGES/kernel-installer.po
@@ -707,5 +707,42 @@ msgstr "Cancelled"
 #~ msgid "Warning: Error regenerating initramfs"
 #~ msgstr "Предупреждение: ошибка регенерации initramfs"
 
-#~ msgid "Warning: Error updating bootloader"
-#~ msgstr "Предупреждение: ошибка обновления загрузчика"
+#: kernel_installer_gui/core/kernel.py:414
+msgid "Generating .deb package (compressing)..."
+msgstr "Генерация пакета .deb (сжатие)..."
+
+#: kernel_installer_gui/core/kernel.py:416
+msgid "Preparing Debian packaging scripts..."
+msgstr "Подготовка сценариев сборки Debian..."
+
+#: kernel_installer_gui/core/kernel.py:417
+msgid "Generating RPM package (compressing)..."
+msgstr "Генерация пакета RPM (сжатие)..."
+
+#: kernel_installer_gui/core/kernel.py:418
+msgid "RPM package generated."
+msgstr "Пакет RPM создан."
+
+#: kernel_installer_gui/core/kernel.py:419
+msgid "Kernel image ready, finalizing..."
+msgstr "Ядро готово, завершение..."
+
+#: kernel_installer_gui/core/kernel.py:420
+msgid "Finalizing modules (stage 2)..."
+msgstr "Завершение модулей (этап 2)..."
+
+#: kernel_installer_gui/core/kernel.py:421
+msgid "Compressing kernel modules..."
+msgstr "Сжатие модулей ядра..."
+
+#: kernel_installer_gui/core/kernel.py:422
+msgid "Running mkinitcpio..."
+msgstr "Запуск mkinitcpio..."
+
+#: kernel_installer_gui/core/kernel.py:423
+msgid "Running dracut..."
+msgstr "Запуск dracut..."
+
+#: kernel_installer_gui/core/kernel.py:772
+msgid "Removing kernel and updating bootloader..."
+msgstr "Удаление ядра и обновление загрузчика..."
